--- a/appdev-examen/app.json
+++ b/appdev-examen/app.json
@@ -30,11 +30,25 @@
       "favicon": "./assets/images/favicon.png"
     },
     "plugins": [
+
       "expo-router",
-      "expo-font"
-    ],
+       "expo-font",
+       [
+         "expo-camera",
+         {
+           "cameraPermission": "Allow $(PRODUCT_NAME) to access your camera",
+           "microphonePermission": "Allow $(PRODUCT_NAME) to access your microphone",
+           "isAccesMediaLocationEnabled": "true"
+         }
+       ]
+     ],
+
+    
     "experiments": {
       "typedRoutes": true
     }
   }
 }
+
+
+ 
