--- a/appdev-examen/package.json
+++ b/appdev-examen/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
+    "@react-native-async-storage/async-storage": "^2.1.0",
     "@react-navigation/native": "^7.0.0",
     "expo": "~52.0.20",
     "expo-brightness": "~13.0.2",
@@ -39,9 +40,11 @@
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "^4.0.0",
+    "react-native-view-shot": "~4.0.3",
     "react-native-vision-camera": "^4.6.3",
     "react-native-web": "~0.19.13",
-    "react-native-view-shot": "~4.0.3"
+    "expo-file-system": "~18.0.6",
+    "expo-print": "~14.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
