--- a/appdev-examen/package.json
+++ b/appdev-examen/package.json
@@ -44,7 +44,8 @@
     "react-native-vision-camera": "^4.6.3",
     "react-native-web": "~0.19.13",
     "expo-file-system": "~18.0.6",
-    "expo-print": "~14.0.2"
+    "expo-print": "~14.0.2",
+    "expo-image": "~2.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
