--- a/appdev-examen/package.json
+++ b/appdev-examen/package.json
@@ -17,16 +17,21 @@
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
     "@react-native-async-storage/async-storage": "^2.1.0",
+    "@react-native-picker/picker": "^2.10.2",
     "@react-navigation/native": "^7.0.0",
     "expo": "~52.0.20",
     "expo-brightness": "~13.0.2",
     "expo-camera": "~16.0.10",
     "expo-constants": "~17.0.2",
+    "expo-file-system": "~18.0.6",
     "expo-font": "~13.0.1",
+    "expo-image": "~2.0.3",
     "expo-linking": "~7.0.3",
     "expo-location": "~18.0.4",
     "expo-media-library": "~17.0.4",
+    "expo-print": "~14.0.2",
     "expo-router": "~4.0.15",
+    "expo-screen-orientation": "^8.0.2",
     "expo-sensors": "~14.0.1",
     "expo-sharing": "~13.0.0",
     "expo-splash-screen": "~0.29.18",
@@ -36,16 +41,14 @@
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.5",
+    "react-native-element-dropdown": "^2.12.2",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "^4.0.0",
     "react-native-view-shot": "~4.0.3",
     "react-native-vision-camera": "^4.6.3",
-    "react-native-web": "~0.19.13",
-    "expo-file-system": "~18.0.6",
-    "expo-print": "~14.0.2",
-    "expo-image": "~2.0.3"
+    "react-native-web": "~0.19.13"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
